fix: User out of bounds

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
     justify-content: space-between; */
     border: solid 1px black;
     height: 30rem;
-    width: 42%;
+    width: 480px;
     position: relative;
 }
 
